# serializable-excel

./: .buildinfo  .gitignore  .readthedocs.yml  README.md  advanced.html  api.html  contributing.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  overview.html  pyproject.toml  quickstart.html  requirements-docs.txt  requirements.txt  search.html  searchindex.js  test_example.py
.github/workflows/: docs.yml
_sources/: advanced.rst.txt  api.rst.txt  contributing.rst.txt  index.rst.txt  installation.rst.txt  license.rst.txt
docs/: advanced.rst  api.rst  conf.py  examples.rst  make.bat  overview.rst  quickstart.rst
docs/_static/: .gitkeep
docs/_templates/: .gitkeep
serializable_excel/: __init__.py  colors.py  descriptors.py  excel_io.py  excel_reader.py  excel_writer.py  field_extractor.py  field_metadata.py  models.py
tests/: README.md  __init__.py  conftest.py  models.py  requirements.txt  test_column_order.py  test_excel_types.py
